# held-in-trust

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  wave_task.md
.github/workflows/: ci.yml
backend/: eslint.config.js  package-lock.json  package.json
backend/api/: README.md  package.json
backend/api/__tests__/: server.test.ts
backend/api/src/: index.ts  server.ts
backend/indexer/: README.md  package.json
backend/indexer/__tests__/: index.test.ts  sync.test.ts
backend/indexer/src/: index.ts  sync.ts
contracts/compliant_token/: Cargo.toml
contracts/compliant_token/src/: lib.rs
contracts/modules/accredited_investor/: Cargo.toml  README.md
contracts/modules/accredited_investor/src/: lib.rs
contracts/modules/jurisdiction_allowlist/: Cargo.toml
contracts/modules/jurisdiction_allowlist/src/: lib.rs
contracts/modules/lockup_vesting/: README.md
db/migrations/: 001_cap_table.sql  002_indexed_events_dedup_key.sql
docs/: RFC.md
e2e/: 01_setup_and_deploy.sh  02_issuance_lifecycle_flow.sh  README.md  lib.sh  run_all.sh
