[package]
name = "held-in-trust-compliant-token"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
held-in-trust-jurisdiction-allowlist = { path = "../modules/jurisdiction_allowlist" }
